2008-03-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - make :first-letter apply to the first letter in normal flow, skipping
          floats and positioned objects

        Test: fast/css/first-letter-skip-out-of-flow.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::updateFirstLetter):

2008-03-03  Ada Chan  <adachan@apple.com>

        Fix build.

        * plugins/win/PluginViewWin.cpp:

2008-03-03  Mark Rowe  <mrowe@apple.com>

        Reviewed by Dan Bernstein.

        Fix http://bugs.webkit.org/show_bug.cgi?id=17313
        Bug 17313: querySelectorAll() causing crashes when called via dojo.query() wrapper

        Node::querySelector and SelectorNodeList were not sufficiently initializing the CSSStyleSelector
        before using it to resolve styles, which lead to it having a stale m_style member in some situations.
        This stale m_style member resulted in a wild store that would write over whatever object now resided
        at the location m_style pointed to.

        Test: fast/dom/SelectorAPI/bug-17313.html

        * dom/Node.cpp:
        (WebCore::Node::querySelector): Call initForStyleResolve to further initialize the CSSStyleSelector.
        * dom/SelectorNodeList.cpp:
        (WebCore::SelectorNodeList::SelectorNodeList): Ditto.

2008-03-03  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin and Sam.

        Include fixes, in preparation of using the headers in WebCore/bridge.
        
        * bindings/js/kjs_binding.h:
        * bindings/js/kjs_dom.cpp:
        * bindings/objc/DOMInternal.mm:
        * bindings/objc/DOMUtility.mm:
        * bindings/objc/WebScriptObject.mm:
        * bindings/objc/WebScriptObjectPrivate.h:
        * bridge/objc/objc_class.h:
        * bridge/objc/objc_instance.h:
        * bridge/objc/objc_runtime.h:
        * bridge/objc/objc_utility.h:
        * bridge/runtime.h:
        * bridge/runtime_object.h:
        * bridge/runtime_root.h: