@@ -37,10 +37,13 @@
 #include "kjs_dom.h"
 #include "kjs_proxy.h"
 
+#if USE(JAVASCRIPTCORE_BINDINGS)
+#include <bindings/runtime.h>
+#endif
+
 #if USE(NPOBJECT)
 #include <bindings/NP_jsobject.h>
 #include <bindings/npruntime_impl.h>
-#include <bindings/runtime.h>
 #include <bindings/runtime_root.h>
 #endif
 
