@@ -1,3 +1,9 @@
+2008-03-07  Mark Rowe  <mrowe@apple.com>
+
+        Fix the 64-bit build.
+
+        * html/HTMLPlugInElement.cpp:  We need to include runtime.h even when Netscape plugins are disabled.
+
 2008-03-03  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
